--- a/src/pages/lessonChose/chose.css
+++ b/src/pages/lessonChose/chose.css
@@ -186,6 +186,10 @@
   color: #fff;
 }
 
+.tab-btn.selected i {
+    color: black;
+}
+
 @media (max-width: 600px) {
   .lesson-chose-title {
     font-size: 2rem;
