--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,8 +24,11 @@
 }
 
 .brand .logo {
-    width: 44px;
-    height: 44px;
+    height: 30px;
+}
+
+.brand span {
+    font-size: 25px;
 }
 
 .main-nav {
