Change some goofy buttons

--- a/src/pages/Lesson/components/Editor/Editor.css
+++ b/src/pages/Lesson/components/Editor/Editor.css
@@ -79,7 +79,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-height: 48px;
+    max-height: 48px;
 }
 
 .panel-header h3 {
