--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -10,7 +10,6 @@
     flex: 1;
     padding-top: 10px;
     position: relative;
-    overflow-x: hidden;
 }
 
 /* Ensure consistent spacing for all pages */
@@ -20,6 +19,7 @@
     padding: 0;
     position: relative;
     z-index: 1;
+    height: 70vh;
 }
 
 /* Mobile responsive adjustments */
