--- a/src/pages/Lesson/components/Question/Question.css
+++ b/src/pages/Lesson/components/Question/Question.css
@@ -10,6 +10,30 @@
     flex-direction: column;
 }
 
+/* Quiz header -- center title and description */
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    margin: 20px 0 5px 0;
+}
+
+.quiz-title {
+    font-size: 2rem;
+    margin: 0 0 6px 0;
+    color: white;
+    font-weight: 700;
+}
+
+.quiz-description {
+    margin: 0;
+    color: white;
+    font-size: 1rem;
+}
+
 .question-box {
     background-color: var(--glass-border);
     padding: 10px;
