--- a/src/pages/lessonChose/chose.css
+++ b/src/pages/lessonChose/chose.css
@@ -2,10 +2,10 @@
   border-color: #fff;
 }
 .lesson-phases-scroll {
-  max-height: 500px;
   overflow-y: auto;
   width: 100%;
   max-width: 480px;
+  margin-bottom: 50px;
 }
 
 /* Custom scrollbar for lesson-phases-scroll */
@@ -60,6 +60,8 @@
 }
 .lesson-chose-tabs.side {
   margin-top: 0;
+  position: sticky;
+  top: 120px;
 }
 
 .tab-btn {
@@ -98,8 +100,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 24px;
-  width: 100%;
-  max-width: 480px;
+  width: max-content;
   padding-right: 10px;
 }
 
