Center quiz note

--- a/src/pages/Lesson/components/Editor/components/DescriptionBlock/DescriptionBlock.css
+++ b/src/pages/Lesson/components/Editor/components/DescriptionBlock/DescriptionBlock.css
@@ -198,6 +198,7 @@
     font-style: italic;
     width: 100%;
     line-height: 1.5;
+    text-align: center;
 }
 
 .description-block .panel-content {
