--- a/src/pages/Lesson/components/Question/Question.css
+++ b/src/pages/Lesson/components/Question/Question.css
@@ -22,7 +22,7 @@
 }
 
 .quiz-title {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin: 0 0 6px 0;
     color: white;
     font-weight: 700;
@@ -30,8 +30,8 @@
 
 .quiz-description {
     margin: 0;
-    color: white;
-    font-size: 1rem;
+    color: var(--muted);
+    font-size: 1.2rem;
 }
 
 .question-box {
