--- a/src/pages/Lesson/components/Question/Question.css
+++ b/src/pages/Lesson/components/Question/Question.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     font-family: "Inter", sans-serif;
-    margin: 20px auto;
+    margin: 0px auto;
     display: flex;
     flex-direction: column;
 }
@@ -18,12 +18,12 @@
     justify-content: center;
     text-align: center;
     width: 100%;
-    margin: 20px 0 5px 0;
+    margin: 0px 0 5px 0;
 }
 
 .quiz-title {
     font-size: 2.5rem;
-    margin: 0 0 6px 0;
+    margin: 0 0 0;
     color: white;
     font-weight: 700;
 }
@@ -124,7 +124,7 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    height: 100%;
+    height: 85%;
 }
 
 /* Side navigation buttons */
