Fix weird outline

--- a/src/pages/Lesson/components/Question/Question.css
+++ b/src/pages/Lesson/components/Question/Question.css
@@ -260,6 +260,7 @@
 .external-submit-container.visible {
     max-height: 80px;
     opacity: 1;
+    overflow: visible;
 }
 
 .submit-btn-external {
